fix border-radious on mobile

--- a/src/css/form.css
+++ b/src/css/form.css
@@ -21,6 +21,7 @@
         background: transparent;
         border: none;
         border-bottom: 1px solid var(--grayColor);
+        border-radius: 0;
         margin: 20px 0 0;
         padding: 0 0 15px 0;
         box-sizing: border-box;
